Fixing border gap on photos

--- a/_assets/less/colorbox.less
+++ b/_assets/less/colorbox.less
@@ -25,7 +25,7 @@
 #cboxContent { margin-top:32px; overflow:visible; }
 .cboxIframe { background:#fff; }
 #cboxError { padding:50px; border:1px solid #ccc; }
-#cboxLoadedContent { border: 1px solid #000; }
+.cboxPhoto { border: 1px solid #000; }
 #cboxLoadingGraphic { background:url(/images/loading.gif) no-repeat center center; }
 #cboxLoadingOverlay { background:#000; }
 #cboxTitle { position:absolute; top:-22px; left:0; color:#000; }
